update project name

--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mo-Slide Example</title>
+    <title>Mostage Example</title>
 </head>
 <body>
     <div id="app"></div>
