--- a/example/demo.html
+++ b/example/demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mo-Slide Demo - All Features</title>
+    <title>Mostage Demo - All Features</title>
     <style>
         body { 
             margin: 0; 
