add theme ocean

--- a/example/index.html
+++ b/example/index.html
@@ -186,6 +186,7 @@
                         <option value="dark">Dark</option>
                         <option value="solarized">Solarized</option>
                         <option value="dracula">Dracula</option>
+                        <option value="ocean">Ocean</option>
                     </select>
                 </div>
                 
