add confetti as a plugin

--- a/example/index.html
+++ b/example/index.html
@@ -26,7 +26,7 @@
           ProgressBar: {
             position: "bottom", // top | bottom
             color: "#007acc", // CSS color value
-            height: "5px", // CSS size value
+            height: "12px", // CSS size value
           },
           SlideNumber: {
             position: "bottom-right", // bottom-right | bottom-left | bottom-center
@@ -43,6 +43,7 @@
             vertical: true, // Center vertically
             horizontal: true, // Center horizontally
           },
+          Confetti: true, // Enable confetti plugin (controlled in markdown)
         },
       });
 
