--- a/example/index.html
+++ b/example/index.html
@@ -17,33 +17,34 @@
         markdown: "./slides.md",
         scale: 1.0,
         transition: {
-          type: "horizontal", // horizontal | vertical | fade | slide
-          duration: 600, // (ms)
-          easing: "ease-in-out", // easing type
+          type: "horizontal",
+          duration: 600,
+          easing: "ease-in-out",
         },
         loop: false,
+        urlHash: true,
         plugins: {
           ProgressBar: {
-            position: "bottom", // top | bottom
-            color: "#007acc", // CSS color value
-            height: "12px", // CSS size value
+            position: "bottom",
+            color: "#007acc",
+            height: "12px",
           },
           SlideNumber: {
-            position: "bottom-right", // bottom-right | bottom-left | bottom-center
-            format: "current/total", // e.g., "1/10"
+            position: "bottom-right",
+            format: "current/total",
           },
           Controller: {
-            show: true, // Show or hide the controller
-            position: "bottom-center", // bottom-right | bottom-left | bottom-center
+            show: true,
+            position: "bottom-center",
           },
           OverviewMode: {
-            scale: 0.2, // Scale of slides in overview mode
+            scale: 0.2,
           },
           CenterContent: {
-            vertical: true, // Center vertically
-            horizontal: true, // Center horizontally
+            vertical: true,
+            horizontal: true,
           },
-          Confetti: true, // Enable confetti plugin (controlled in markdown)
+          Confetti: true,
         },
       });
 
