prepare demo and add example for all parsers

--- a/example/index.html
+++ b/example/index.html
@@ -14,7 +14,9 @@
       const mostage = new Mostage({
         element: "#app",
         theme: "dark",
-        markdown: "./slides.md",
+        // contentData: "# Internal content",
+        contentSource: "./slides.md",
+        contentType: "markdown",
         scale: 1.0,
         transition: {
           type: "horizontal",
