fix centerContent in overview

--- a/example/html-demo/index.html
+++ b/example/html-demo/index.html
@@ -16,6 +16,10 @@
         theme: "dark",
         contentSource: "./slide.html",
         contentType: "html",
+        centerContent: {
+          vertical: false,
+          horizontal: false,
+        },
       });
 
       mostage.start();
