--- a/example/html-demo/index.html
+++ b/example/html-demo/index.html
@@ -13,7 +13,7 @@
 
       const mostage = new Mostage({
         element: "#app",
-        theme: "dark",
+        theme: "dracula",
         contentSource: "./slide.html",
         contentType: "html",
         centerContent: {
