--- a/example/text-demo/index.html
+++ b/example/text-demo/index.html
@@ -13,7 +13,7 @@
 
       const mostage = new Mostage({
         element: "#app",
-        theme: "dark",
+        theme: "light",
         contentSource: "./slides.txt",
         contentType: "text",
       });
