add theme rainbow as a colorful theme

--- a/example/markdown-demo/index.html
+++ b/example/markdown-demo/index.html
@@ -13,7 +13,7 @@
 
       const mostage = new Mostage({
         element: "#app",
-        theme: "ocean",
+        theme: "rainbow",
         contentSource: "./slides.md",
         contentType: "markdown",
       });
