add parameters to confetti

--- a/example/html-demo/index.html
+++ b/example/html-demo/index.html
@@ -20,6 +20,11 @@
           vertical: false,
           horizontal: false,
         },
+        plugins: {
+          Confetti: {
+            enabled: true,
+          },
+        },
       });
 
       mostage.start();
