--- a/example/index.html
+++ b/example/index.html
@@ -44,7 +44,25 @@
             show: true,
             position: "bottom-center",
           },
-          Confetti: true,
+          Confetti: {
+            enabled: true,
+            // particleCount: 50,
+            // colors: [
+            //   "#ff6b6b",
+            //   "#4ecdc4",
+            //   "#45b7d1",
+            //   "#96ceb4",
+            //   "#feca57",
+            //   "#ff9ff3",
+            //   "#54a0ff",
+            // ],
+            // size: {
+            //   min: 5,
+            //   max: 15,
+            // },
+            // duration: 4000,
+            // delay: 50,
+          },
         },
       });
 
