--- a/example/markdown-demo/index.html
+++ b/example/markdown-demo/index.html
@@ -16,6 +16,11 @@
         theme: "rainbow",
         contentSource: "./slides.md",
         contentType: "markdown",
+        plugins: {
+          Confetti: {
+            enabled: true,
+          },
+        },
       });
 
       mostage.start();
