--- a/example/text-demo/index.html
+++ b/example/text-demo/index.html
@@ -16,6 +16,11 @@
         theme: "light",
         contentSource: "./slides.txt",
         contentType: "text",
+        plugins: {
+          Confetti: {
+            enabled: true,
+          },
+        },
       });
 
       mostage.start();
