add "enable" as a parameter to base plugin

--- a/example/html-demo/index.html
+++ b/example/html-demo/index.html
@@ -21,6 +21,15 @@
           horizontal: false,
         },
         plugins: {
+          ProgressBar: {
+            enabled: true,
+          },
+          SlideNumber: {
+            enabled: true,
+          },
+          Controller: {
+            enabled: true,
+          },
           Confetti: {
             enabled: true,
           },
