--- a/example/index.html
+++ b/example/index.html
@@ -32,16 +32,18 @@
         loop: false,
         plugins: {
           ProgressBar: {
+            enabled: true,
             position: "bottom",
             color: "#007acc",
             height: "12px",
           },
           SlideNumber: {
+            enabled: true,
             position: "bottom-right",
             format: "current/total",
           },
           Controller: {
-            show: true,
+            enabled: true,
             position: "bottom-center",
           },
           Confetti: {
