--- a/example/text-demo/index.html
+++ b/example/text-demo/index.html
@@ -17,6 +17,15 @@
         contentSource: "./slides.txt",
         contentType: "text",
         plugins: {
+          ProgressBar: {
+            enabled: true,
+          },
+          SlideNumber: {
+            enabled: true,
+          },
+          Controller: {
+            enabled: true,
+          },
           Confetti: {
             enabled: true,
           },
