--- a/example/markdown-demo/index.html
+++ b/example/markdown-demo/index.html
@@ -17,6 +17,15 @@
         contentSource: "./slides.md",
         contentType: "markdown",
         plugins: {
+          ProgressBar: {
+            enabled: true,
+          },
+          SlideNumber: {
+            enabled: true,
+          },
+          Controller: {
+            enabled: true,
+          },
           Confetti: {
             enabled: true,
           },
