use theme color in overview

--- a/example/index.html
+++ b/example/index.html
@@ -24,12 +24,12 @@
         //   vertical: true,
         //   horizontal: true,
         // },
-        transition: {
-          type: "horizontal",
-          duration: 600,
-          easing: "ease-in-out",
-        },
-        loop: false,
+        // transition: {
+        //   type: "horizontal",
+        //   duration: 600,
+        //   easing: "ease-in-out",
+        // },
+        // loop: false,
         plugins: {
           ProgressBar: {
             enabled: true,
