use html instead of markdown in main example

--- a/example/index.html
+++ b/example/index.html
@@ -15,8 +15,8 @@
         element: "#app",
         theme: "dark",
         // contentData: "# Internal content",
-        contentSource: "./slides.md",
-        contentType: "markdown",
+        contentSource: "./slides.html",
+        contentType: "html",
         urlHash: true,
         // scale: 1.0,
         // centerContent is enabled by default with both vertical and horizontal centering
