--- a/example/html-demo/slide.html
+++ b/example/html-demo/slide.html
@@ -97,10 +97,7 @@
 <h3>Video</h3>
 
 <video width="400" height="300" controls>
-  <source
-    src="https://sample-videos.com/zip/10/mp4/SampleVideo_1280x720_1mb.mp4"
-    type="video/mp4"
-  />
+  <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4" />
   Your browser does not support the video element.
 </video>
 
