add scale option to config

--- a/example/index.html
+++ b/example/index.html
@@ -18,8 +18,8 @@
         contentSource: "./slides.html",
         contentType: "html",
         urlHash: true,
-        // scale: 1.0,
-        // centerContent is enabled by default with both vertical and horizontal centering
+        // scale: 1.2,
+        // scale: 0.7,
         // centerContent: {
         //   vertical: true,
         //   horizontal: true,
@@ -33,18 +33,18 @@
         plugins: {
           ProgressBar: {
             enabled: true,
-            position: "bottom",
-            color: "#007acc",
-            height: "12px",
+            // position: "bottom",
+            // color: "#007acc",
+            // height: "12px",
           },
           SlideNumber: {
             enabled: true,
-            position: "bottom-right",
-            format: "current/total",
+            // position: "bottom-right",
+            // format: "current/total",
           },
           Controller: {
             enabled: true,
-            position: "bottom-center",
+            // position: "bottom-center",
           },
           Confetti: {
             enabled: true,
