--- a/example/index.html
+++ b/example/index.html
@@ -15,8 +15,7 @@
         element: "#app",
         theme: "dark",
         // contentData: "# Internal content",
-        contentSource: "./slides.html",
-        contentType: "html",
+        contentSource: "./slides.md",
         urlHash: true,
         // scale: 1.2,
         // scale: 0.7,
