improve content loader

--- a/example/index.html
+++ b/example/index.html
@@ -14,8 +14,8 @@
       const mostage = new Mostage({
         element: "#app",
         theme: "dark",
-        // contentData: "# Internal content",
-        contentSource: "./slides.md",
+        // content: "# Internal content",
+        contentPath: "./slides.md",
         urlHash: true,
         // scale: 1.2,
         // scale: 0.7,
