--- a/example/index.html
+++ b/example/index.html
@@ -41,6 +41,48 @@
           position: "bottom-left",
           // showOnFirstSlide: true,
         },
+        // background: {
+        //   imagePath: "./background.jpg",
+        //   size: "cover",
+        //   position: "center",
+        //   repeat: "no-repeat",
+        //   bgColor: "#000000",
+        //   // global: true,
+        //   // allSlides: [1, 23],
+        //   allSlidesExcept: [1, 23],
+        // },
+        background: [
+          {
+            imagePath: "./background/background-left.jpg",
+            size: "cover",
+            position: "left",
+            repeat: "no-repeat",
+            bgColor: "#000000",
+            // global: true,
+            allSlides: [1],
+            // allSlidesExcept: [1, 23],
+          },
+          {
+            imagePath: "./background/background-line.svg",
+            size: "contain",
+            position: "bottom",
+            repeat: "no-repeat",
+            bgColor: "#000000",
+            // global: true,
+            // allSlides: [22,23],
+            allSlidesExcept: [1, 23],
+          },
+          {
+            imagePath: "./background/background-animation.svg",
+            size: "cover",
+            position: "center",
+            repeat: "no-repeat",
+            bgColor: "#000000",
+            // global: true,
+            allSlides: [23],
+            // allSlidesExcept: [1, 23],
+          },
+        ],
         plugins: {
           ProgressBar: {
             enabled: true,
