--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,12 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="./icons/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="./icons/favicon.svg" />
     <link
       rel="icon"
       type="image/png"
-      sizes="16x16"
-      href="./icons/favicon-16x16.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./icons/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="48x48"
-      href="./icons/favicon-48x48.png"
+      sizes="96x96"
+      href="./icons/favicon-96x96.png"
     />
     <link
       rel="apple-touch-icon"
@@ -34,14 +23,17 @@
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="./icons/android-chrome-192x192.png"
+      href="./icons/web-app-manifest-192x192.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="512x512"
-      href="./icons/android-chrome-512x512.png"
+      href="./icons/web-app-manifest-512x512.png"
     />
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="./icons/site.webmanifest" />
 
     <link rel="stylesheet" href="./css/main.css" />
   </head>
