style: improve header of demo

--- a/public/index.html
+++ b/public/index.html
@@ -43,15 +43,7 @@
     />
     <meta property="twitter:creator" content="@mirmousaviii" />
 
-    <!-- Additional SEO -->
     <meta name="theme-color" content="#667eea" />
-    <meta name="msapplication-TileColor" content="#667eea" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="black-translucent"
-    />
-    <meta name="apple-mobile-web-app-title" content="Mostage" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://mo.js.org/" />
@@ -65,26 +57,6 @@
       sizes="96x96"
       href="./icons/favicon-96x96.png"
     />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./icons/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="./icons/web-app-manifest-192x192.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="512x512"
-      href="./icons/web-app-manifest-512x512.png"
-    />
-
-    <!-- Web App Manifest -->
-    <link rel="manifest" href="./icons/site.webmanifest" />
 
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -93,7 +65,7 @@
     <nav class="navbar" role="navigation" aria-label="Main navigation">
       <div class="nav-container">
         <div class="nav-logo">
-          <a href="#" class="logo-link">
+          <a href="https://mo.js.org/" class="logo-link">
             <img src="./images/logo.svg" alt="Mostage" class="logo-img" />
             <span class="logo-text">Mostage</span>
           </a>
@@ -517,23 +489,19 @@ Mostage is a modern presentation framework
           <div class="demo-grid">
             <div class="demo-card">
               <iframe
-                src="https://mostafa-ahmadi.github.io/mostage/demo/"
+                src="https://mo.js.org/demo/"
                 class="demo-iframe"
               ></iframe>
-              <a
-                href="https://mostafa-ahmadi.github.io/mostage/demo/"
-                target="_blank"
+              <a href="https://mo.js.org/demo/" target="_blank"
                 >Demo Example - Try or Click to open</a
               >
             </div>
             <div class="demo-card">
               <iframe
-                src="https://mostafa-ahmadi.github.io/mostage/basic/"
+                src="https://mo.js.org/basic/"
                 class="demo-iframe"
               ></iframe>
-              <a
-                href="https://mostafa-ahmadi.github.io/mostage/basic/"
-                target="_blank"
+              <a href="https://mo.js.org/basic/" target="_blank"
                 >Basic Example - Try or Click to open</a
               >
             </div>
