chor: update footer of website

--- a/public/index.html
+++ b/public/index.html
@@ -124,12 +124,10 @@
             <img src="./images/logo.svg" alt="Mostage" class="hero-logo" />
             Mostage
           </h1>
-          <h2 class="hero-subtitle">Generate web slides by Markdown</h2>
-          <p class="hero-description">
-            Presentation framework based on markdown and HTML
-            <br />
-            [Core Library + CLI]
-          </p>
+          <h2 class="hero-subtitle">
+            Presentation framework based on<br /> Markdown and HTML!
+          </h2>
+          <p class="hero-description">Available as a <strong>core library</strong> and <strong>CLI</strong></strong></p>
           <div class="hero-buttons">
             <a href="#getting-started" class="btn btn-secondary">Get Started</a>
             <a href="#demo" class="btn btn-primary">View Demo</a>
@@ -661,11 +659,30 @@ Mostage is a modern presentation framework
             </div>
           </div>
           <div class="footer-links">
-            <a href="https://github.com/mirmousaviii/mostage">GitHub</a>
-            <a href="https://github.com/mirmousaviii/mostage/tree/main/docs"
+            <a
+              href="https://github.com/mirmousaviii/mostage"
+              target="_blank"
+              rel="noopener noreferrer"
+              >GitHub</a
+            >
+            <a
+              href="https://www.npmjs.com/package/mostage"
+              target="_blank"
+              rel="noopener noreferrer"
+              >NPM</a
+            >
+            <a
+              href="https://github.com/mirmousaviii/mostage/tree/main/docs"
+              target="_blank"
+              rel="noopener noreferrer"
               >Docs</a
             >
-            <a href="https://github.com/mirmousaviii/mostage/issues">Issues</a>
+            <a
+              href="https://github.com/mirmousaviii/mostage/issues"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Issues</a
+            >
           </div>
         </div>
         <div class="footer-bottom">
