style: improve size of demo website

--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,7 @@
 
         <!-- Desktop Navigation -->
         <div class="nav-links">
+          <a href="#why" class="nav-link">Why</a>
           <a href="#themes" class="nav-link">Themes</a>
           <a href="#plugins" class="nav-link">Plugins</a>
           <a href="#demo" class="nav-link">Demo</a>
@@ -126,6 +127,7 @@
       <!-- Mobile Navigation -->
       <div class="mobile-nav" aria-hidden="true">
         <div class="mobile-nav-content">
+          <a href="#why" class="mobile-nav-link">Why</a>
           <a href="#themes" class="mobile-nav-link">Themes</a>
           <a href="#plugins" class="mobile-nav-link">Plugins</a>
           <a href="#demo" class="mobile-nav-link">Demo</a>
@@ -203,7 +205,7 @@ Mostage is a modern presentation framework
     </section>
 
     <!-- Why Section -->
-    <section class="why-section">
+    <section id="why" class="why-section">
     <div class="container">
         <h2 class="section-title animate-on-scroll">Why Mostage?</h2>
         <p class="section-subtitle animate-on-scroll delay-1">
